@@ -112,6 +112,9 @@ paths are considered for body capture. ({pull}2873[#2873])
   (because there is no point). This is a performance improvement for
   Knex usage in the default configuration. ({pull}2879[#2879])
 
+* Document and add types for `parent` option to
+  <<apm-capture-error,`apm.captureError()`>>. ({issues}2977[#2977])
+
 
 [[release-notes-3.38.0]]
 ==== 3.38.0 2022/08/11
